fixed bug that caused flickering target blank on mobile

--- a/scss/components/_animations.scss
+++ b/scss/components/_animations.scss
@@ -77,7 +77,7 @@
   animation-duration: 5s;
 
   @media (min-width: 576px) {
-    animation-duration: 15s;
+    animation-duration: 20s;
     animation-name: fly-lg;
   }
 }
