--- a/scss/components/_base.scss
+++ b/scss/components/_base.scss
@@ -32,7 +32,6 @@ body {
   line-height: 1.6;
   color: $tertiary;
   background-color: $primary;
-  min-height: 100vh;
 }
 
 a {
