--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -14,23 +14,25 @@
 
   &--primary {
     position: relative;
-    transition: all 1s;
+    // transition: all 1s;
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -20px;
-      width: 0;
-      height: 100%;
-      background-color: $secondary;
-      transform: skewX(35deg);
-      z-index: -1;
-      transition: width 1s;
-    }
+    @media (min-width: 576px) {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -20px;
+        width: 0;
+        height: 100%;
+        background-color: $secondary;
+        transform: skewX(35deg);
+        z-index: -1;
+        transition: width 1s;
+      }
 
-    &:hover::before {
-      width: 150%;
+      &:hover::before {
+        width: 150%;
+      }
     }
   }
 
